Help Command Color setter - last commit before release